# picozk

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  binary.py  example_dask_array.py  example_dask_dataframe.py  example_field_element.py  example_hash.py  example_numpy_array.py  example_pandas_dataframe.py  example_secretint.py  example_substring_search.py  functions.py  picowizpl.py  poseidon_hash.py  pyproject.toml  setup.py
cython/: EMPBridge.cpp  EMPBridge.h  EMPBridge.pxd  emp_bridge.cpp  emp_bridge.pyx  readme_example.py  setup.py  simple_readme_example.py
examples/: bench_kmp.py  bench_sparsemat.py  example_binary.py  example_cpu.py  example_dask_dataframe.py  example_decisiontree.py  example_dp.py  example_ecdsa.py  example_emp.py  example_emp_freivalds.py  example_emp_permutation.py  example_freivalds.py  example_functions.py  example_functions_sha256.py  example_gale_shapley.py  example_hash.py  example_histogram.py  example_maximum.py  example_mod.py  example_multi_fields.py  example_mux.py  example_numpy_array.py  example_oblif.py  example_pandas.py  example_pandas_dataframe.py  example_pandas_dataframe2.py  example_poseidon.py  example_poseidon_buffered.py  example_poseidon_large.py  example_pytorch.py  example_pytorch_conv.py  example_pytorch_relu.py  example_ram.py  example_rng.py  example_secretint.py  example_sha256.py  example_sha256_buffered.py  example_stack.py  example_substring_search.py  kmp.py  (+4 more)
picowizpl/: __init__.py  binary.py  binary_int.py  compiler.py  datatypes.py  functions.py  ram.py  util.py  wire.py
picowizpl/poseidon_hash/: poseidon_hash.py
picozk/: __init__.py  binary.py  binary_int.py  compiler.py  config.py  datatypes.py  emp_compiler.py  functions.py  ram.py  sha256.py  util.py  wire.py
picozk/poseidon_hash/: __init__.py  poseidon_hash.py
