[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "picozk"
description = "PicoZK library & compiler for writing zero-knowledge statements"
authors = [{name = "Joe Near", email = "jnear@uvm.edu"}]
version = "0.2"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.mit.edu/sieve-all/picozk.git"

[project.optional-dependencies]
examples = [
     "ecdsa==0.18.0",
     "galois==0.1.1",
     "numpy==1.21.6",
     "pandas==1.3.5",
     "scipy==1.10.1",
     "torch==1.11.0",
     "torchvision==0.12.0"]

[tool.setuptools]
packages = ["picozk", "picozk.poseidon_hash"]
zip-safe = false