[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "picozk"
description = "PicoZK library & compiler for writing zero-knowledge statements"
authors = [{name = "Joe Near", email = "jnear@uvm.edu"}]
version = "0.4"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<=3.11.7"

[project.urls]
Repository = "https://github.com/uvm-plaid/picozk"

[project.optional-dependencies]
examples = [
     "ecdsa==0.18.0",
     "galois==0.3.7",
     "numpy==1.25.2",
     "pandas==2.2.0",
     "scipy==1.12.0",
     "scikit-learn==1.4.0",
     "torch==2.2.0",
     "torchvision==0.17.0"]

[tool.setuptools]
packages = ["picozk", "picozk.poseidon_hash"]
zip-safe = false
